--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # Auth
 
-APP_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NywiaWF0IjoxNTc2MzkxNjQ3LCJleHAiOjE1NzY5OTY0NDd9.ByNzRbQIrTGfLnu-UrCQmH3q-gPobUGLHBAtItOh-no
+APP_SECRET=bootcampgobarbernode
 
 # Database
 
